--- a/server.properties
+++ b/server.properties
@@ -7,8 +7,8 @@ server.log = ERROR
 #DB user to connect67
 db.user = postgres
 #DB user password
-db.pass = adminMercadoLibre
+db.pass = admin
 #DB user password
 db.port = 5432
 #DB user password
-db.name = pruebaxmen
+db.name = xmen
