--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
 	<artifactId>xmen</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>xmenApp</name>
+	<packaging>jar</packaging>
+
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<finalName>xmenApp</finalName>
@@ -24,7 +30,7 @@
 						</manifest>
 					</archive>
 				</configuration>
-			</plugin>
+			</plugin>			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
@@ -106,6 +112,11 @@
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
 			<version>4.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.23</version>
 		</dependency>
 	</dependencies>
 </project>
