--- a/server.properties
+++ b/server.properties
@@ -1,13 +1,13 @@
 #Port to listening request
 server.test.port = 9092
 #Port to listening request
-server.prod.port = 9090
+server.prod.port = 80
 #Level of Log
 server.log = ERROR
 #DB user to connect67
 db.user = postgres
 #DB user password
-db.pass = admin
+db.pass = root
 #DB user password
 db.port = 5432
 #DB user password
